Code to skip goals if no wall intersecting path.